name:                cx
version:             0.1.0.0
synopsis:            Chess eXperiment
-- description:
homepage:            https://github.com/relrod/cx
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
      Game.Chess.Board
    , Game.Chess.Piece
    , Game.Chess.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010