name:                cx
version:             0.1.0.0
synopsis:            Chess eXperiment
description:         An experimental, slow chess engine.
homepage:            https://github.com/relrod/cx
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2016 Ricky ELrod
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2, GHC == 8.0.1

library
  exposed-modules:
      Game.Chess.Board
    , Game.Chess.Demo
    , Game.Chess.FEN
    , Game.Chess.Negamax
    , Game.Chess.Piece
    , Game.Chess.Position
    , Game.Chess.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       attoparsec >= 0.10 && < 0.15
                     , base >= 4 && < 5
                     , split
                     , text
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -W -Wall
